# src/api/dto/user.go
@@ -1,0 +1,5 @@
+package dto
+
+type GetOtpRequest struct{
+	MobileNumber string `json:"MobileNumber" binding:"required,mobile,min=11,max=11"` 
+}
